--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Elliot Lemaire",
+  "author": "VILLIER-EMMANUEL Boris",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
